# api_v1/resources/lang/en/login.php
@@ -1,0 +1,16 @@
+<?php
+
+return [    
+    'user_found' 		=> 	'User Details get Successfully.',
+    'user_not_found' 	=> 	'User Details get Successfully.',
+    'logout' 			=> 	'User Logout Successfully.',
+    'token' 			=> 	'Token Generated Successfully',
+    'token_valid'		=> 	'Token is Valid',
+    'invalid' 			=> 	'User Credentials are Invalid',
+    'your_password_has_been_reset_successfully' => 'Your password has been reset successfully.',
+    'otp_has_been_sent_to_your_registered_mobile_number' => 'OTP has been sent to your registered mobile number.',
+    'no_login_access_found' => 'No login access found.',
+    'invalid_otp' => 'Invalid OTP.',
+    'unable_to_save_password' => 'Unable to save password.',
+	'register_success'=> 'You have registered succesfully.',
+];
